overflow fix

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -60,7 +60,6 @@ a,
   body {
     display: flex;
     text-align: center;
-    
   }
 
   .content{
@@ -68,9 +67,9 @@ a,
   }
 
   #app {
-    display: block;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
+    width: 50%;
   }
 
   header{
